<resources>
    <string name="app_name">TaskTimeTrackerApp</string>
    <string name="entries">Entries</string>
    <string name="task_time_tracker">Task Time Tracker</string>
    <string name="track_your_time_spent_on_tasks">Track your time spent on tasks</string>
    <string name="dashboard">Dashboard</string>
    <string name="task_1">Task 1</string>
    <string name="task_2">Task 2</string>
    <string name="tasks">Tasks</string>
    <string name="task_4">Task 4</string>
    <string name="projects">Projects</string>
    <string name="database">Init Database</string>
    <string name="task_3">Task 3</string>
    <string name="title_activity_task_overview">TaskOverviewActivity</string>
    <string name="tasks_overview">Tasks Overview</string>
    <string name="title_activity_add_task">AddTaskActivity</string>
    <string name="title_activity_add_entry">AddTaskActivity</string>
    <string name="add_task">Add Task</string>
    <string name="title_activity_detail_task">DetailTaskActivity</string>
    <string name="title_activity_entries_overview">EntriesOverviewActivity</string>
    <string name="task_prompt">Task</string>
    <string name="project_prompt">Project</string>
    <string name="entries_overview">Entries Overview</string>
    <string name="title_activity_detail_entry">DetailEntryActivity</string>
    <string name="title_activity_project_overview">ProjectOverviewActivity</string>
    <string name="title_activity_add_project">AddProjectActivity</string>
    <string name="title_activity_detail_project">DetailProjectActivity</string>
    <string name="title_activity_widget_task_setting">WidgetTaskSettingActivity</string>
    <string name="title_activity_init_database">Init Database</string>
    <string name="add_entry">Add Entry</string>
    <string name="task_name">Task Name</string>
    <string name="entry_description">Entry Description</string>
    <string name="select_or_add_project">Select or Add Project</string>
    <string name="select_task">Select Task</string>
    <string name="export">Export as CSVs</string>
    <string name="print">Print to PDF</string>
    <string name="total_time">Total Time</string>
    <string name="end_date">End Date</string>
    <string name="start_date">Start Date</string>
    <string name="select_or_add_task">Select or Add Task</string>
    <string name="edit">Edit</string>
    <string name="init_database">Init Database</string>
    <string name="add_project">Add Project</string>
    <string name="project_name">Project Name</string>
    <string name="back">Back</string>
    <string name="widget_settings">Widget Settings</string>
    <string name="select_a_task_for_widget_spot_1">Select a Task for Widget Spot 1</string>
    <string name="select_a_task_for_widget_spot_2">Select a Task for Widget Spot 2</string>
    <string name="select_a_task_for_widget_spot_3">Select a Task for Widget Spot 3</string>
    <string name="select_a_task_for_widget_spot_4">Select a Task for Widget Spot 4</string>
    <string name="clear_all">Clear All</string>
    <string name="add_new_task">Add new Task</string>
    <string name="entry_details">Entry Details</string>
    <string name="end_datetime">End DateTime</string>
    <string name="start_datetime">Start DateTime</string>
    <string name="project">Project</string>
    <string name="edit_timestamp">Edit TimeStamp</string>
    <string name="no_task">No Task</string>
</resources>