<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <!-- Header Text View -->
    <TextView
        android:id="@+id/header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/task_time_tracker"
        android:textSize="32sp"
        android:gravity="center"
        android:background="@color/mainColor"
        android:textColor="#FFFFFF"
        android:paddingTop="16dp"
        android:paddingBottom="16dp"/>

    <!-- Task Details Text View -->
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/entry_details"
        android:gravity="center"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="20dp"
        android:textSize="24sp"/>
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayoutTaskName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="20dp">

        <TextView
            android:id="@+id/editTextTaskName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/task_name"
            android:focusable="false"
            android:focusableInTouchMode="false"
            android:layout_marginBottom="8dp"/>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayoutProject"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="20dp">

        <TextView
            android:id="@+id/editTextProject"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/project"
            android:focusable="false"
            android:focusableInTouchMode="false"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:autofillHints="@String/Project" />

    </com.google.android.material.textfield.TextInputLayout>

    <EditText
        android:id="@+id/editDate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/edit_timestamp"
        android:focusable="false"
        android:focusableInTouchMode="false"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:autofillHints="StartDate"
        android:inputType="date"/>

    <EditText
        android:id="@+id/editTime"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/edit_timestamp"
        android:focusable="false"
        android:focusableInTouchMode="false"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:autofillHints="StartDate"
        android:inputType="date"/>

    <Button
        android:id="@+id/saveButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="16dp"
        android:background="@color/actionColor"
        android:text="Save">
    </Button>



    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fabBack"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|start"
        android:layout_margin="16dp"
        android:src="@drawable/ic_back"
        app:tint="@color/white"
        app:layout_anchorGravity="bottom|start|end"
        app:fabCustomSize="56dp"
        app:backgroundTint="@color/actionColor"
        android:contentDescription="@string/edit" />

</LinearLayout>
