<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/task_time_tracker"
        android:textSize="32sp"
        android:gravity="center"
        android:background="@color/mainColor"
        android:textColor="#FFFFFF"
        android:paddingTop="16dp"
        android:paddingBottom="16dp"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/entries_overview"
        android:gravity="center"
        android:layout_marginTop="5dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="20dp"
        android:textSize="24sp"/>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayoutProjectName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="16dp">

        <AutoCompleteTextView
            android:id="@+id/projectName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/select_or_add_project"
            android:inputType="text" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayoutTaskName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="16dp">

        <AutoCompleteTextView
            android:id="@+id/taskName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/select_or_add_task"
            android:inputType="text" />

    </com.google.android.material.textfield.TextInputLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_marginTop="8dp">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputLayoutStartDate"
            android:layout_width="172dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:inputType="none">

            <EditText
                android:id="@+id/editTextStartDate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:hint="@string/start_date"
                android:focusable="false"
                android:focusableInTouchMode="false"
                android:cursorVisible="false"
                android:inputType="none"/>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputLayoutEndDate"
            android:layout_width="172dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginStart="16dp"
            android:inputType="none">

            <EditText
                android:id="@+id/editTextEndDate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:hint="@string/end_date"
                android:focusable="false"
                android:focusableInTouchMode="false"
                android:cursorVisible="false"
                android:inputType="none"/>

        </com.google.android.material.textfield.TextInputLayout>
    </LinearLayout>

    <TextView
        android:id="@+id/textViewTotalTime"
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:text="@string/total_time"
        android:gravity="center"
        android:layout_marginTop="8dp"/>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_marginTop="8dp" >

        <Button
            android:id="@+id/buttonPrint"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@color/actionColor"
            android:textColor="@color/black"
            android:text="@string/print"
            style="?android:attr/buttonBarButtonStyle" />

        <Button
            android:id="@+id/buttonExport"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@color/actionColor"
            android:textColor="@color/black"
            android:text="@string/export"
            android:layout_marginStart="16dp"
            style="?android:attr/buttonBarButtonStyle" />
    </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerViewEntries"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="8dp"
        android:layout_weight="1"
        android:scrollbars="vertical" />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="bottom"
        android:layout_marginTop="8dp" >

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/fabBack"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|start"
            android:layout_margin="16dp"
            android:src="@drawable/ic_back"
            app:backgroundTint="@color/actionColor"
            app:fabCustomSize="56dp"
            app:layout_anchorGravity="bottom|start"
            app:tint="@color/white" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/fabAddEntry"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center|center|center"
            android:layout_margin="16dp"
            android:src="@drawable/ic_add"
            app:backgroundTint="@color/actionColor"
            app:fabCustomSize="56dp"
            app:layout_anchorGravity="center|center|center"
            app:tint="@color/white" />

    </LinearLayout>

</LinearLayout>
