<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/task_time_tracker"
        android:textSize="32sp"
        android:gravity="center"
        android:background="@color/mainColor"
        android:textColor="#FFFFFF"
        android:paddingTop="16dp"
        android:paddingBottom="16dp"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/add_task"
        android:gravity="center"
        android:layout_marginTop="5dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="20dp"
        android:textSize="24sp"/>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayoutTaskName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="20dp">

        <EditText
            android:id="@+id/taskName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/task_name"
            android:inputType="text" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayoutProjectName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="20dp">

        <AutoCompleteTextView
            android:id="@+id/projectName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/select_or_add_project"
            android:inputType="text" />

    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/addTaskButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/add_task"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="20dp"
        android:backgroundTint="@color/actionColor"
        android:textColor="#FFFFFF"/>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fabBack"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|start"
        android:layout_margin="16dp"
        android:src="@drawable/ic_back"
        app:tint="@color/white"
        app:layout_anchorGravity="bottom|start|end"
        app:fabCustomSize="56dp"
        app:backgroundTint="@color/actionColor"/>


</LinearLayout>