<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/mainColor"
        android:paddingTop="10dp"
        android:paddingBottom="10dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/task_time_tracker"
            android:textSize="32sp"
            android:textColor="#FFFFFF"
            android:gravity="center"
            android:layout_gravity="center"/>
    </androidx.appcompat.widget.Toolbar>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/dashboard"
        android:gravity="center"
        android:layout_marginTop="5dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="20dp"
        android:textSize="24sp"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="40dp">

        <Button
            android:id="@+id/main_buttonTask1"
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:text="@string/no_task"
            android:layout_margin="10dp"
            android:textColor="@color/black"
            android:background="@drawable/round_button_inactiv"
            style="?android:attr/buttonBarButtonStyle" />

        <Button
            android:id="@+id/main_buttonTask2"
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:text="@string/no_task"
            android:layout_margin="10dp"
            android:textColor="@color/black"
            android:background="@drawable/round_button_inactiv"
            style="?android:attr/buttonBarButtonStyle" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="center_horizontal">

        <Button
            android:id="@+id/main_buttonTask3"
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:text="@string/no_task"
            android:layout_margin="10dp"
            android:textColor="@color/black"
            android:background="@drawable/round_button_inactiv"
            style="?android:attr/buttonBarButtonStyle" />

        <Button
            android:id="@+id/main_buttonTask4"
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:text="@string/no_task"
            android:layout_margin="10dp"
            android:textColor="@color/black"
            android:background="@drawable/round_button_inactiv"
            style="?android:attr/buttonBarButtonStyle" />
    </LinearLayout>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/TaskAssingmentButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="20dp"
        android:src="@drawable/ic_edit"
        android:layout_marginTop="100dp"
        app:tint="@color/white"
        app:fabCustomSize="100dp"
        app:backgroundTint="@color/actionColor"
        android:contentDescription="@string/edit" />
</LinearLayout>
